# contentflow-ai

./: .env.example  .gitignore  README.md  SCRIPT_MIGRATION.md  UV_GUIDE.md  UV_VENV_GUIDE.md  app.py  crawler.py  example.py  generate_blog.py  pyproject.toml  run.sh  setup.sh  setup_and_run.sh  start.sh  test_crawler.py  verify_js_injection.py
.uv/: uv.toml
ai_content_generator/: __init__.py  __main__.py  content_generator.py  example.py  generator.py  main.py
ai_content_generator/config/: __init__.py  config.py  models.json  models_example.json  prompts.json  prompts_example.json
ai_content_generator/generators/: __init__.py  multi_platform_generator.py  video_generator.py
ai_content_generator/managers/: __init__.py  config_manager.py  file_manager.py  prompt_manager.py
ai_content_generator/utils/: __init__.py  data_loader.py  logger.py
ai_content_generator/workflows/: __init__.py  workflow_orchestrator.py
airflow/: README.md
airflow/config/: .env.example
airflow/dags/: content_generation_dag.py  crawler_task_dag.py  daily_crawler_pipeline.py  example_crawler_dag.py
airflow/docker/: Dockerfile  airflow.cfg  entrypoint.sh  requirements.txt  webserver_config.py
airflow/scripts/: README.md  airflow-manager.sh
backend/: .env.example  README.md  __init__.py  app.py  config.py  crawler.py  extensions.py  generate_blog.py  run.py
backend/api/: __init__.py  ai_config.py  ai_model.py  auth.py  backdoor.py  content.py  crawler.py  crawler_configs.py  dashboard.py  files.py  monitoring.py  prompt.py  tasks.py  user.py  (+1 more)
blog_generator/: README.md  __init__.py  blog_generator.py  logger.py
blogs/: README.md
config/: config.json  config.py
crawler/: README.md  __init__.py  core.py  crawler.py  logger.py
crawler_data/: README.md
crawler_utils/: __init__.py  batch_downloader.py  crawler_core.py  github_image_uploader.py  html_parser.py  image_downloader.py  js_injection_validator.py  selenium_renderer.py  storage_manager.py  xpath_manager.py
data/: README.md
db/: .gitkeep  auth.db
deploy/: README.md
docs/: README.md  js_injection_verification.md
examples/: crawler_example.sh  generate_blog_combined_example.sh  generate_blog_example.sh  generate_blog_from_crawler_example.sh  github_image_example.py  github_image_example.sh  metadata_example.json  verify_js_injection_example.sh  xpath_crawler_example.sh
frontend/: .env.development  .env.example  .env.production  README.md  index.html  package-lock.json  package.json  vite.config.js  vite.config.ts
frontend_old/: .env.development  package.json  vite.config.js
instance/: crawler_platform.db
output/: README.md
scripts/: backup-database.sh  restore-database.sh  start-airflow.sh  start-all.sh  start-backend.sh  start-frontend.sh  stop-all.sh
tests/: __init__.py  test_crawler_basic.py  test_enable_xpath.py  test_generate_blog.py  test_html_parser_reddit_media.py  test_js_injection.py  test_selenium_renderer.py  test_stealth_driver.py  test_timeout_decorator.py  test_xpath_rules.py
utils/: __init__.py  blog_generator.py  downloader.py  generate_blog.py  github_image_uploader.py  logger.py  notifier.py  parser.py  xpath_manager.py
(+276 files in other folders)
