[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "web-crawler"
version = "0.1.0"
description = "网页图片和标题爬虫"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
packages = [{include = "backend"}]

dependencies = [
    # Flask核心框架
    "flask>=2.3.3",
    "flask-cors>=4.0.0",
    "flask-jwt-extended>=4.5.3",
    "flask-limiter>=3.5.0",
    "flask-sqlalchemy>=3.0.5",
    "flask-migrate>=4.0.5",
    # 数据库
    "sqlalchemy>=2.0.23",
    "pymysql>=1.1.0",

    # 工具库
    "requests>=2.31.0",
    "celery>=5.3.4",
    "redis>=5.0.1",
    "apscheduler>=3.10.4",
    # 数据处理
    "pandas>=2.1.3",
    "numpy>=1.25.2",
    "beautifulsoup4>=4.12.2",
    "lxml>=4.9.3",
    # 爬虫相关
    "selenium>=4.15.2",
    "scrapy>=2.11.0",
    "webdriver-manager>=4.0.1",
    # 图片处理
    "pillow>=10.1.0",
    # 其他工具
    "python-dotenv>=1.0.0",
    "werkzeug>=2.3.7",
    "click>=8.1.7",
    "jinja2>=3.1.2",
    "markupsafe>=2.1.3",
    "itsdangerous>=2.1.2",
    "blinker>=1.7.0",
    "colorama>=0.4.6",
    "tqdm>=4.66.1",
    "pyyaml>=6.0.1",
    "timeout-decorator>=0.5.0",
    "psutil>=5.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.3",
    "pytest-flask>=1.3.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.1.0",
]

[tool.uv]

[tool.hatch.build.targets.wheel]
packages = ["utils", "."]
